# obsidian

./: Cargo.toml  README.md  ~
obsidian/: Cargo.toml  build.rs
obsidian/proptest-regressions/: lib.txt
obsidian/proptest-regressions/lsm/: run.txt
obsidian/src/: coordinator.rs  discovery.rs  frontend.rs  gateway.rs  grpc.rs  lib.rs  lock_mgr.rs  lsm.rs  lsm_block.rs  lsm_run.rs  lsm_util.rs  memtable.rs  meta.rs  meta_synced.rs  obsidian.rs  range.rs  router.rs  sequencer.rs  shard.rs  shards.rs  storage.rs  supervisor.rs  tablet.rs  test.rs  tuple_encoding.rs  types.rs  util.rs  wal.rs
obsidian/src/cmd/: mod.rs
obsidian/src/election/: atomic_instant.rs  mod.rs  proposal.rs  seq_waiters.rs  tests.rs
obsidian/src/grpc/: frontend_client.rs  frontend_server.rs  gateway_client.rs  gateway_server.rs  grpc_nodes.rs  journals_client.rs  journals_server.rs  mod.rs  node_client.rs  node_server.rs  node_tests.rs  util.rs
obsidian/src/lsm/: block.rs  compactor.rs  index.rs  lsm.rs  lsm_revision.rs  manifest.rs  memtable.rs  mod.rs  preload.rs  run.rs  run_id.rs  tests.rs  util.rs
obsidian/src/lsm/util/: mod.rs  packed_vec2.rs  prefix_compressed_kv.rs
obsidian/src/meta/: meta.rs  meta_key.rs  meta_mutation.rs  meta_reader.rs  meta_state.rs  meta_subscriber.rs  meta_sync.rs  meta_synced.rs  meta_tx.rs  meta_value.rs  meta_watcher.rs  mod.rs  node_metadata.rs  shard_metadata.rs  tablet_metadata.rs  tablet_state.rs  transfer.rs  transfer_metadata.rs  transfer_state.rs
obsidian/src/node/: mod.rs  tests.rs
obsidian/src/olf/: block.rs  block_revision.rs  mod.rs  olf_file.rs
obsidian/src/olf/util/: mod.rs  packed_vec2.rs  prefix_compressed_kv.rs
obsidian/src/replica/: mod.rs  recovery.rs  replica.rs  shard_journal.rs  shareable_revokable.rs  tablet_journal.rs  tests.rs
obsidian/src/rtest/: graph.rs  mod.rs  workload_append.rs
obsidian/src/runtime/: discovery.rs  journal.rs  journals.rs  meta.rs  mod.rs  node.rs  nodes.rs  shard.rs  shards.rs  storage.rs  supervisor.rs  tablet.rs  wal.rs  wals.rs
obsidian/src/shard/: mod.rs  shard.rs  shard_data_tablet.rs
obsidian/src/storage/: cached_storage.rs  mem_storage.rs  mod.rs  s3.rs
obsidian/src/supervisor/: mod.rs  rebalance.rs
obsidian/src/tablet/: active_tablet.rs  data_tablet.rs  data_tablet2.rs  frozen_tablet.rs  hydrating_tablet.rs  journaled_lsm.rs  key_locks.rs  lock_mgr.rs  meta_tablet.rs  mod.rs  protected.rs  read_only_lsm.rs  scan_locks.rs  sequencer.rs  shard_meta_tablet.rs  tablet.rs  tablet_id.rs  tablet_inner.rs  tablet_journal_writer.rs  tests.rs
obsidian/src/test/: grpc_bridge.rs  grpc_in_process_node_builder.rs  in_process_node_builder.rs  in_process_nodes.rs  mem_file_reader.rs  mem_file_writer.rs  mem_journal.rs  mem_journals.rs  mem_storage.rs  mem_wal.rs  mem_wals.rs  meta_proxy.rs  mod.rs  nodes.rs  obsidian_suite.rs  shards.rs  subprocess_nodes.rs  suite.rs  tablet_suite.rs  test_discovery.rs  test_node_builder.rs  test_nodes.rs
obsidian/src/types/: bound.rs  colo_group_id.rs  direction.rs  history_range.rs  internal_error.rs  ip_addr.rs  journal_entry.rs  journal_seq.rs  key.rs  key_or_bound.rs  keyspace_id.rs  mod.rs  mutation.rs  node_id.rs  precondition.rs  range.rs  range_map.rs  range_set.rs  record.rs  revision.rs  shard_id.rs  tablet_id.rs  tablet_journal_entry.rs  timestamp.rs  transfer_id.rs  tx_outcome.rs  txid.rs  uuid.rs  wal_entry.rs  wal_seq.rs  write_error.rs
obsidian/src/util/: atomic_instant.rs  atomic_timestamp.rs  background.rs  bytes.rs  compressed_key_set.rs  futures.rs  iterator_either.rs  merge_sorted.rs  mod.rs  ord_eq_by_first.rs  owned.rs  pause.rs  retry.rs  state_machine.rs  waitable_ord.rs  waitable_timestamp.rs  watchable.rs
obsidian_common/: Cargo.toml
obsidian_common/src/: bound.rs  colo_group_id.rs  direction.rs  history_range.rs  internal_error.rs  ip_addr.rs  journal_entry.rs  journal_seq.rs  key.rs  key_or_bound.rs  keyspace_id.rs  lib.rs  manifest.rs  mutation.rs  node_id.rs  precondition.rs  range.rs  range_map.rs  range_set.rs  record.rs  revision.rs  run_id.rs  shard_id.rs  tablet_id.rs  tablet_journal_entry.rs  timestamp.rs  transfer_id.rs  tx_outcome.rs  txid.rs  uuid.rs
obsidian_external/: Cargo.toml
obsidian_external/src/: consul_node_discovery.rs  file_reader.rs  file_writer.rs  journal.rs  journals.rs  lib.rs  node_discovery.rs  s3_storage.rs  storage.rs
obsidian_external/src/mem/: mem_file_reader.rs  mem_file_writer.rs  mem_journal.rs  mem_journals.rs  mem_storage.rs  mod.rs
obsidian_lsm/: Cargo.toml
obsidian_lsm/src/: compactor.rs  index.rs  lib.rs  lsm.rs  memtable.rs  preload.rs  run.rs  tests.rs
obsidian_olf/: Cargo.toml
obsidian_olf/src/: block.rs  block_revision.rs  lib.rs  mem_file_writer.rs  olf_file.rs
obsidian_olf/src/util/: mod.rs  packed_vec2.rs  prefix_compressed_kv.rs
obsidian_pb/: Cargo.toml  build.rs
obsidian_pb/src/: lib.rs
obsidian_util/: Cargo.toml
obsidian_util/src/: atomic_instant.rs  background.rs  binary_search_by_idx.rs  bytes.rs  iterator_either.rs  lib.rs  merge_sorted.rs  ord_eq_by_first.rs  owned.rs  retry.rs  state_machine.rs  time.rs  waitable_ord.rs  watchable.rs
page_cache/: Cargo.toml
page_cache/src/: lib.rs
proto/: meta.proto  obsidian.proto
proto/internal/: error.proto  internal.proto  meta.proto  node.proto  proposal.proto  tablet.proto
succinct-trie/: Cargo.toml
succinct-trie/proptest-regressions/: lib.txt
succinct-trie/src/: lib.rs
