[package]
name = "obsidian"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-stream = "0.3.3"
async-trait = "0.1.57"
byteorder = "1.4.3"
futures = "0.3.23"
rand = "0.8.5"
tokio = { version = "1.20.1", features = ["io-util", "fs", "rt", "macros", "sync", "time"] }
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
proptest = "1.0.0"
