[package]
name = "obsidian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
arc-atomic = "0.1.0"
async-stream = "0.3.3"
async-trait = "0.1.57"
bitmask-enum = "2.2.5"
byteorder = "1.4.3"
crossbeam = "0.8.4"
futures = "0.3.23"
im = "15.1.0"
log = "^0.4"
pretty_env_logger = "^0.5"
priority-queue = "^1.3"
prost = "0.11.9"
rand = "0.8.5"
thiserror = "^1.0"
tokio = { version = "1.20.1", features = ["io-util", "fs", "rt", "rt-multi-thread", "macros", "sync", "time"] }
tonic = "0.9"
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
proptest = "1.0.0"

[build-dependencies]
tonic-build = "0.9"
