[package]
name = "obsidian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
async-stream = "0.3.3"
async-trait = "0.1.57"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.128.0"
byteorder = "1.4.3"
clap = { version = "4.6.1", features = ["derive"] }
console-subscriber = "0.4.1"
crossbeam = "0.8.4"
crossbeam-skiplist = "0.1.3"
futures = "0.3.23"
im = "15.1.0"
log = "^0.4"
obsidian_common = { path = "../obsidian_common" }
obsidian_external = { path = "../obsidian_external" }
obsidian_lsm = { path = "../obsidian_lsm" }
obsidian_olf = { path = "../obsidian_olf" }
obsidian_pb = { path = "../obsidian_pb" }
obsidian_util = { path = "../obsidian_util" }
pretty_env_logger = "^0.5"
priority-queue = "^1.3"
prost = "0.11.9"
rand = "0.8.5"
regex = "1.12.3"
rs-consul = "0.13.0"
rustls = "0.23"
thiserror = "^1.0"
tokio = { version = "1.47.1", features = [ "fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time", "tracing" ] }
tokio-stream = "0.1.18"
tonic = "0.9"
uuid = { version = "1.18.1", features = ["v4", "v7"] }

[dev-dependencies]
proptest = "1.0.0"

[build-dependencies]
tonic-build = "0.9"
