[package]
name = "obsidian_external"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
async-stream = "0.3.3"
async-trait = "0.1.57"
futures = "0.3.23"
im = "15.1.0"
log = "^0.4"
obsidian_common = { path = "../obsidian_common" }
pretty_env_logger = "^0.5"
tokio = { version = "1.47.1", features = [ "fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time", "tracing" ] }
