[package]
name = "obsidian_olf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
async-stream = "0.3.3"
async-trait = "0.1.57"
byteorder = "1.4.3"
futures = "0.3.23"
log = "^0.4"
obsidian_util = { path = "../obsidian_util" }
obsidian_common = { path = "../obsidian_common" }
pretty_env_logger = "^0.5"
rand = "0.8.5"
tokio = { version = "1.47.1", features = [ "fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time", "tracing" ] }
uuid = { version = "1.18.1", features = ["v4", "v7"] }

[dev-dependencies]
proptest = "1.0.0"
