[package]
name = "obsidian_pb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
prost = "0.11.9"
tonic = "0.9"

[build-dependencies]
tonic-build = "0.9"
